dropshot/tests/fail/bad_server_invalid_types.stderr
error[E0277]: the trait bound `HttpResponseOk<()>: _::{closure#0}::ResultTrait` is not satisfied
  --> tests/fail/bad_server_invalid_types.rs:10:10
   |
10 |     ) -> HttpResponseOk<()>;
   |          ^^^^^^^^^^^^^^ the trait `_::{closure#0}::ResultTrait` is not implemented for `HttpResponseOk<()>`
   |
   = help: the trait `_::{closure#0}::ResultTrait` is implemented for `Result<TT, EE>`

error[E0277]: the trait bound `(): HttpCodedResponse` is not satisfied
  --> tests/fail/bad_server_invalid_types.rs:20:10
   |
20 |     ) -> Result<(), HttpError>;
   |          ^^^^^^ the trait `HttpCodedResponse` is not implemented for `()`
   |
   = help: the following other types implement trait `HttpCodedResponse`:
             HttpResponseCreated<T>
             HttpResponseAccepted<T>
             HttpResponseOk<T>
             HttpResponseDeleted
             HttpResponseUpdatedNoContent
             dropshot::handler::HttpResponseFoundStatus
             dropshot::handler::HttpResponseSeeOtherStatus
             dropshot::handler::HttpResponseTemporaryRedirectStatus
   = note: required for `()` to implement `HttpResponse`
note: required for `Result<(), HttpError>` to implement `_::{closure#0}::ResultTrait`
  --> tests/fail/bad_server_invalid_types.rs:20:10
   |
5  | #[dropshot_server]
   | ------------------ unsatisfied trait bound introduced here
...
20 |     ) -> Result<(), HttpError>;
   |          ^^^^^^

error[E0277]: the trait bound `(): HttpCodedResponse` is not satisfied
  --> tests/fail/bad_server_invalid_types.rs:25:10
   |
25 |     ) -> Result<(), ()>;
   |          ^^^^^^ the trait `HttpCodedResponse` is not implemented for `()`
   |
   = help: the following other types implement trait `HttpCodedResponse`:
             HttpResponseCreated<T>
             HttpResponseAccepted<T>
             HttpResponseOk<T>
             HttpResponseDeleted
             HttpResponseUpdatedNoContent
             dropshot::handler::HttpResponseFoundStatus
             dropshot::handler::HttpResponseSeeOtherStatus
             dropshot::handler::HttpResponseTemporaryRedirectStatus
   = note: required for `()` to implement `HttpResponse`
note: required for `Result<(), ()>` to implement `_::{closure#0}::ResultTrait`
  --> tests/fail/bad_server_invalid_types.rs:25:10
   |
5  | #[dropshot_server]
   | ------------------ unsatisfied trait bound introduced here
...
25 |     ) -> Result<(), ()>;
   |          ^^^^^^

error[E0277]: the trait bound `HttpResponseOk<()>: _::{closure#0}::ResultTrait` is not satisfied
  --> tests/fail/bad_server_invalid_types.rs:10:10
   |
10 |     ) -> HttpResponseOk<()>;
   |          ^^^^^^^^^^^^^^^^^^ the trait `_::{closure#0}::ResultTrait` is not implemented for `HttpResponseOk<()>`
   |
   = help: the trait `_::{closure#0}::ResultTrait` is implemented for `Result<TT, EE>`

error[E0271]: type mismatch resolving `<() as TypeEq>::This == HttpError`
  --> tests/fail/bad_server_invalid_types.rs:15:10
   |
15 |     ) -> Result<HttpResponseOk<()>, ()>;
   |          ^^^^^^
   |          |
   |          expected this to be `HttpError`
   |          type mismatch resolving `<() as TypeEq>::This == HttpError`
   |
note: required by a bound in `_::{closure#0}::validate_result_error_type`
  --> tests/fail/bad_server_invalid_types.rs:15:10
   |
15 |     ) -> Result<HttpResponseOk<()>, ()>;
   |          ^^^^^^ required by this bound in `validate_result_error_type`

error[E0271]: type mismatch resolving `<() as TypeEq>::This == HttpError`
  --> tests/fail/bad_server_invalid_types.rs:25:10
   |
25 |     ) -> Result<(), ()>;
   |          ^^^^^^
   |          |
   |          expected this to be `HttpError`
   |          type mismatch resolving `<() as TypeEq>::This == HttpError`
   |
note: required by a bound in `_::{closure#0}::validate_result_error_type`
  --> tests/fail/bad_server_invalid_types.rs:25:10
   |
25 |     ) -> Result<(), ()>;
   |          ^^^^^^ required by this bound in `validate_result_error_type`
